--- a/readme.ipynb
+++ b/readme.ipynb
@@ -37,8 +37,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "window.senderAddress = \"orai14vcw5qk0tdvknpa38wz46js5g7vrvut8lk0lk6\";\n",
-        "window.client = new SimulateCosmWasmClient({\n",
+        "senderAddress = \"orai14vcw5qk0tdvknpa38wz46js5g7vrvut8lk0lk6\";\n",
+        "client = new SimulateCosmWasmClient({\n",
         "  chainId: \"Oraichain\",\n",
         "  bech32Prefix: \"orai\",\n",
         "  metering: true\n",
@@ -100,7 +100,7 @@
         "    mint: { minter: senderAddress },\n",
         "    initial_balances: [{ address: senderAddress, amount: \"1000000000\" }] \n",
         "}, \"cw20 token\", \"auto\");\n",
-        "window.contractAddress = result.contractAddress;\n",
+        "contractAddress = result.contractAddress;\n",
         "const cw20Contract = new Cw20BaseClient(client, senderAddress, contractAddress);\n",
         "\n",
         "return await cw20Contract.tokenInfo()"
@@ -139,7 +139,7 @@
         }
       ],
       "source": [
-        "window.cw20Contract = new Cw20BaseClient(client, senderAddress, contractAddress);\n",
+        "cw20Contract = new Cw20BaseClient(client, senderAddress, contractAddress);\n",
         "const { gasUsed } = await cw20Contract.transfer({amount: '1000000', recipient: 'orai1ur2vsjrjarygawpdwtqteaazfchvw4fg6uql76'});\n",
         "console.log(`Transfer token required gas: ${gasUsed}`);\n",
         "\n",
@@ -161,7 +161,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "window.cosmosChain = new CWSimulateApp({\n",
+        "cosmosChain = new CWSimulateApp({\n",
         "    chainId: \"cosmoshub-4\",\n",
         "    bech32Prefix: \"cosmos\"\n",
         "});\n",
@@ -277,7 +277,7 @@
         "}, \"ics20\", \"auto\");\n",
         "\n",
         "\n",
-        "window.ics20Contract = new CwIcs20LatestClient(client, senderAddress, contractAddress);\n",
+        "ics20Contract = new CwIcs20LatestClient(client, senderAddress, contractAddress);\n",
         "\n",
         "return await ics20Contract.config()"
       ]
@@ -297,8 +297,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "window.oraiPort = \"wasm.\" + ics20Contract.contractAddress;\n",
-        "window.channel = \"channel-2\"\n",
+        "oraiPort = \"wasm.\" + ics20Contract.contractAddress;\n",
+        "channel = \"channel-2\"\n",
         "\n",
         "// init ibc channel between two chains\n",
         "client.app.ibc.relay(channel, oraiPort, channel, \"transfer\", cosmosChain);"
@@ -386,7 +386,7 @@
         }
       ],
       "source": [
-        "window.airiIbcDenom = \"tron-testnet0x7e2A35C746F2f7C240B664F1Da4DD100141AE71F\";\n",
+        "airiIbcDenom = \"tron-testnet0x7e2A35C746F2f7C240B664F1Da4DD100141AE71F\";\n",
         "\n",
         "await ics20Contract.updateMappingPair({\n",
         "   localAssetInfo: {\n",
@@ -466,8 +466,6 @@
         "    remote_address: cosmosSenderAddress,\n",
         "    remote_denom: airiIbcDenom\n",
         "};\n",
-        "\n",
-        "cw20Contract.sender = senderAddress;\n",
         "\n",
         "await cw20Contract.send({\n",
         "    amount: \"100000000\",\n",
