--- a/readme.ipynb
+++ b/readme.ipynb
@@ -92,7 +92,8 @@
         }
       ],
       "source": [
-        "const { codeId } = await client.upload(senderAddress, new Uint8Array(await fetch(\"/cw20-base.wasm\").then(res=>res.arrayBuffer())), \"auto\");\n",
+        "const wasmCode = new Uint8Array(await fetch(\"/cw20-base.wasm\").then(res=>res.arrayBuffer()));\n",
+        "const { codeId } = await client.upload(senderAddress, wasmCode, \"auto\");\n",
         "const result = await client.instantiate(senderAddress, codeId, {\n",
         "    decimals: 6,\n",
         "    symbol: \"CVT\",\n",
@@ -263,12 +264,8 @@
       "source": [
         "\n",
         "// deploy ics20 contract \n",
-        "const { codeId } = await client.upload(\n",
-        "    senderAddress,\n",
-        "    new Uint8Array(await fetch(\"/cw-ics20-latest.wasm\").then(res=>res.arrayBuffer())),\n",
-        "    \"auto\"\n",
-        ");\n",
-        "\n",
+        "const wasmCode = new Uint8Array(await fetch(\"/cw-ics20-latest.wasm\").then(res=>res.arrayBuffer()));\n",
+        "const { codeId } = await client.upload(senderAddress, wasmCode, \"auto\");\n",
         "const { contractAddress } = await client.instantiate(senderAddress, codeId, {\n",
         "    allowlist: [],\n",
         "    default_timeout: 3600,\n",
