using Function for faster

--- a/public/basic.ipynb
+++ b/public/basic.ipynb
@@ -44,7 +44,7 @@
         "\n",
         "client.app.bank.setBalance(senderAddress, coins('10000000', 'orai'));\n",
         "\n",
-        "console.log(await client.getBalance(senderAddress, 'orai'))"
+        "console.log(await client.getBalance(senderAddress, 'orai'));"
       ]
     },
     {
@@ -109,7 +109,7 @@
         "const { gasUsed } = await cw20Contract.transfer({amount: '1000000', recipient: 'orai1ur2vsjrjarygawpdwtqteaazfchvw4fg6uql76'});\n",
         "console.log(`Transfer token required gas: ${gasUsed}`);\n",
         "\n",
-        "console.log(await cw20Contract.balance({address:'orai1ur2vsjrjarygawpdwtqteaazfchvw4fg6uql76'}))"
+        "console.log(await cw20Contract.balance({address:'orai1ur2vsjrjarygawpdwtqteaazfchvw4fg6uql76'}));"
       ]
     },
     {
