--- a/public/ibc.ipynb
+++ b/public/ibc.ipynb
@@ -44,7 +44,7 @@
         "\n",
         "client.app.bank.setBalance(senderAddress, coins('10000000', 'orai'));\n",
         "\n",
-        "console.log(await client.getBalance(senderAddress, 'orai'))"
+        "console.log(await client.getBalance(senderAddress, 'orai'));"
       ]
     },
     {
@@ -193,7 +193,7 @@
         "\n",
         "ics20Contract = new CwIcs20LatestClient(client, senderAddress, contractAddress);\n",
         "\n",
-        "console.log(await ics20Contract.config())"
+        "console.log(await ics20Contract.config());"
       ]
     },
     {
@@ -384,7 +384,7 @@
         "const ibcBalance = await cw20Contract.balance({ address: ics20Contract.contractAddress });\n",
         "\n",
         "// should return initialBalance: 100000000\n",
-        "console.log(\"ibc balance\", ibcBalance.balance)"
+        "console.log(\"ibc balance\", ibcBalance.balance);"
       ]
     }
   ],
