--- a/public/nb/basic.ipynb
+++ b/public/nb/basic.ipynb
@@ -30,7 +30,7 @@
       "id": "2bde6d50-2adb-4d18-bd52-d78fb5ff716f",
       "metadata": {},
       "source": [
-        "### Setup account balance then transfer"
+        "### Setup account balance"
       ]
     },
     {
@@ -64,16 +64,16 @@
       "source": [
         "import { Cw20BaseClient } from \"@oraichain/common-contracts-sdk\";\n",
         "\n",
-        "const wasmCode = new Uint8Array(await fetch(\"/cw20-base.wasm\").then(res=>res.arrayBuffer()));\n",
+        "const wasmCode = new Uint8Array(await fetch(\"/wasm/cw20-base.wasm\").then(res=>res.arrayBuffer()));\n",
         "const { codeId } = await client.upload(senderAddress, wasmCode, \"auto\");\n",
-        "const result = await client.instantiate(senderAddress, codeId, {\n",
+        "const { contractAddress } = await client.instantiate(senderAddress, codeId, {\n",
         "    decimals: 6,\n",
         "    symbol: \"CVT\",\n",
         "    name: \"cosmoverse token\",\n",
         "    mint: { minter: senderAddress },\n",
         "    initial_balances: [{ address: senderAddress, amount: \"1000000000\" }] \n",
         "}, \"cw20 token\", \"auto\");\n",
-        "contractAddress = result.contractAddress;\n",
+        "\n",
         "cw20Contract = new Cw20BaseClient(client, senderAddress, contractAddress);\n",
         "\n",
         "console.log(await cw20Contract.tokenInfo());"
@@ -132,10 +132,10 @@
         "import { compare } from \"@oraichain/cosmwasm-vm-js\";\n",
         "import { Cw20BaseClient } from \"@oraichain/common-contracts-sdk\";\n",
         "\n",
-        "const wasmCode = new Uint8Array(await fetch(\"/kwt-token.wasm\").then(res=>res.arrayBuffer()));\n",
+        "const wasmCode = new Uint8Array(await fetch(\"/wasm/kwt-token.wasm\").then(res=>res.arrayBuffer()));\n",
         "const { codeId } = await client.upload(senderAddress, wasmCode, \"auto\");\n",
         "\n",
-        "const buffer = Buffer.from(await fetch('/kwt-token.state').then(res=>res.arrayBuffer()));\n",
+        "const buffer = Buffer.from(await fetch('/wasm/kwt-token.state').then(res=>res.arrayBuffer()));\n",
         "const state = SortedMap.rawPack(new BufferCollection(buffer), compare);\n",
         "\n",
         "const kwtContract = new Cw20BaseClient(client, senderAddress, \"orai1nd4r053e3kgedgld2ymen8l9yrw8xpjyaal7j5\");\n",
