add interchain dao

--- a/public/nb/orderbook.ipynb
+++ b/public/nb/orderbook.ipynb
@@ -18,8 +18,7 @@
     "senderAddress = \"orai14vcw5qk0tdvknpa38wz46js5g7vrvut8lk0lk6\";\n",
     "client = new SimulateCosmWasmClient({\n",
     "  chainId: \"Oraichain\",\n",
-    "  bech32Prefix: \"orai\",\n",
-    "  metering: true\n",
+    "  bech32Prefix: \"orai\"\n",
     "});\n"
    ]
   },
