--- a/public/nb/dao.ipynb
+++ b/public/nb/dao.ipynb
@@ -137,10 +137,10 @@
     "const votingModuleContract = new DaoVotingCw20StakedClient(client, senderAddress, await daoContract.votingModule());\n",
     "const govTokenAddress = await votingModuleContract.tokenContract();\n",
     "const proposalModules = await daoContract.proposalModules({});    \n",
-    "const stakingContract = new Cw20StakeClient(client, senderAddress, await votingModuleContract.stakingContract());\n",
     "const proposalModulesAddr = proposalModules.find((m) => m.status === 'enabled').address;\n",
     "\n",
     "proposalModuleContract = new DaoProposalSingleClient(client, senderAddress, proposalModulesAddr);\n",
+    "stakingContract = new Cw20StakeClient(client, senderAddress, await votingModuleContract.stakingContract());\n",
     "\n",
     "// deposit token\n",
     "await client.execute(\n",
