--- a/public/nb/dao.ipynb
+++ b/public/nb/dao.ipynb
@@ -57,63 +57,80 @@
    "source": [
     "import { toBinary } from \"@cosmjs/cosmwasm-stargate\";\n",
     "import { DaoDaoCoreClient } from \"@oraichain/dao-contracts-sdk\";\n",
+    "const [daoDaoWasmCode, cw20BaseWasmCode, daoVotingWasmCode, cw20StakeWasmCode, daoProposalWasmCode] = await Promise.all(\n",
+    "  [\n",
+    "    \"/wasm/dao-dao-core.wasm\",\n",
+    "    \"/wasm/cw20-base.wasm\",\n",
+    "    \"/wasm/dao-voting-cw20-staked.wasm\",\n",
+    "    \"/wasm/cw20-stake.wasm\",\n",
+    "    \"/wasm/dao-proposal-single.wasm\"\n",
+    "  ].map((wasm) => fetch(wasm).then((res) => res.arrayBuffer()))\n",
+    ");\n",
     "\n",
-    "const { codeId } = await client.upload(senderAddress, new Uint8Array(await fetch(\"/wasm/dao-dao-core.wasm\").then(res=>res.arrayBuffer())), 'auto');\n",
-    "const { codeId: cw20Id } = await client.upload(senderAddress, new Uint8Array(await fetch(\"/wasm/cw20-base.wasm\").then(res=>res.arrayBuffer())), 'auto');\n",
-    "const { codeId: voteModId } = await client.upload(senderAddress, new Uint8Array(await fetch(\"/wasm/dao-voting-cw20-staked.wasm\").then(res=>res.arrayBuffer())), 'auto');\n",
-    "const { codeId: cw20StakeId } = await client.upload(senderAddress, new Uint8Array(await fetch(\"/wasm/cw20-stake.wasm\").then(res=>res.arrayBuffer())), 'auto');\n",
-    "const { codeId: proposalSingleId } = await client.upload(senderAddress, new Uint8Array(await fetch(\"/wasm/dao-proposal-single.wasm\").then(res=>res.arrayBuffer())), 'auto');\n",
+    "const { codeId } = await client.upload(senderAddress, new Uint8Array(daoDaoWasmCode), \"auto\");\n",
+    "const { codeId: cw20Id } = await client.upload(senderAddress, new Uint8Array(cw20BaseWasmCode), \"auto\");\n",
+    "const { codeId: voteModId } = await client.upload(senderAddress, new Uint8Array(daoVotingWasmCode), \"auto\");\n",
+    "const { codeId: cw20StakeId } = await client.upload(senderAddress, new Uint8Array(cw20StakeWasmCode), \"auto\");\n",
+    "const { codeId: proposalSingleId } = await client.upload(senderAddress, new Uint8Array(daoProposalWasmCode), \"auto\");\n",
     "\n",
-    "const { contractAddress } = await client.instantiate(senderAddress, codeId, {\n",
-    "    name: 'DAO DAO',\n",
-    "    description: 'A DAO that builds DAOs.',\n",
+    "const { contractAddress } = await client.instantiate(\n",
+    "  senderAddress,\n",
+    "  codeId,\n",
+    "  {\n",
+    "    name: \"DAO DAO\",\n",
+    "    description: \"A DAO that builds DAOs.\",\n",
     "    automatically_add_cw20s: true,\n",
     "    automatically_add_cw721s: true,\n",
     "    voting_module_instantiate_info: {\n",
-    "        code_id: voteModId,\n",
-    "        msg: toBinary({\n",
-    "            token_info: {\n",
-    "                new: {\n",
-    "                    code_id: cw20Id,\n",
-    "                    label: 'DAO DAO governance token',\n",
-    "                    name: 'DAO',\n",
-    "                    symbol: 'DAO',\n",
-    "                    decimals: 6,\n",
-    "                    initial_balances: [{ amount: '100000000', address: senderAddress }],\n",
-    "                    staking_code_id: cw20StakeId\n",
-    "                }\n",
-    "            },\n",
-    "            active_threshold: {\n",
-    "                absolute_count: {\n",
-    "                    count: '100'\n",
-    "                }\n",
-    "            }\n",
-    "        }),\n",
-    "        admin: { core_module: {} },\n",
-    "        label: 'voting module'\n",
+    "      code_id: voteModId,\n",
+    "      msg: toBinary({\n",
+    "        token_info: {\n",
+    "          new: {\n",
+    "            code_id: cw20Id,\n",
+    "            label: \"DAO DAO governance token\",\n",
+    "            name: \"DAO\",\n",
+    "            symbol: \"DAO\",\n",
+    "            decimals: 6,\n",
+    "            initial_balances: [{ amount: \"100000000\", address: senderAddress }],\n",
+    "            staking_code_id: cw20StakeId\n",
+    "          }\n",
+    "        },\n",
+    "        active_threshold: {\n",
+    "          absolute_count: {\n",
+    "            count: \"100\"\n",
+    "          }\n",
+    "        }\n",
+    "      }),\n",
+    "      admin: { core_module: {} },\n",
+    "      label: \"voting module\"\n",
     "    },\n",
-    "    proposal_modules_instantiate_info: [{\n",
+    "    proposal_modules_instantiate_info: [\n",
+    "      {\n",
     "        code_id: proposalSingleId,\n",
     "        msg: toBinary({\n",
-    "            threshold: {\n",
-    "                threshold_quorum: {\n",
-    "                    quorum: { percent: '0.015' },\n",
-    "                    threshold: { majority: {} }\n",
-    "                }\n",
-    "            },\n",
-    "            max_voting_period: { time: 604800 }, // One week.\n",
-    "            only_members_execute: true,\n",
-    "            allow_revoting: false,\n",
-    "            pre_propose_info: {\n",
-    "                anyone_may_propose: {}\n",
-    "            },\n",
-    "            close_proposal_on_execution_failure: true\n",
+    "          threshold: {\n",
+    "            threshold_quorum: {\n",
+    "              quorum: { percent: \"0.015\" },\n",
+    "              threshold: { majority: {} }\n",
+    "            }\n",
+    "          },\n",
+    "          max_voting_period: { time: 604800 }, // One week.\n",
+    "          only_members_execute: true,\n",
+    "          allow_revoting: false,\n",
+    "          pre_propose_info: {\n",
+    "            anyone_may_propose: {}\n",
+    "          },\n",
+    "          close_proposal_on_execution_failure: true\n",
     "        }),\n",
     "        admin: { core_module: {} },\n",
-    "        label: 'governance module'\n",
-    "    }]\n",
-    "}, \"dao-dao-core\", \"auto\");\n",
-    "  \n",
+    "        label: \"governance module\"\n",
+    "      }\n",
+    "    ]\n",
+    "  },\n",
+    "  \"dao-dao-core\",\n",
+    "  \"auto\"\n",
+    ");\n",
+    "\n",
     "daoContract = new DaoDaoCoreClient(client, senderAddress, contractAddress);"
    ]
   },
