--- a/public/nb/orderbook.ipynb
+++ b/public/nb/orderbook.ipynb
@@ -57,15 +57,21 @@
    "source": [
     "import { Cw20BaseClient } from \"@oraichain/common-contracts-sdk\";\n",
     "\n",
-    "const wasmCode = new Uint8Array(await fetch(\"/wasm/cw20-base.wasm\").then(res=>res.arrayBuffer()));\n",
+    "const wasmCode = new Uint8Array(await fetch(\"/wasm/cw20-base.wasm\").then((res) => res.arrayBuffer()));\n",
     "const { codeId } = await client.upload(senderAddress, wasmCode, \"auto\");\n",
-    "const { contractAddress } = await client.instantiate(senderAddress, codeId, {\n",
+    "const { contractAddress } = await client.instantiate(\n",
+    "  senderAddress,\n",
+    "  codeId,\n",
+    "  {\n",
     "    decimals: 6,\n",
     "    symbol: \"USDT\",\n",
     "    name: \"USDT token\",\n",
     "    mint: { minter: senderAddress },\n",
-    "    initial_balances: [{ address: senderAddress, amount: \"1000000000\" }] \n",
-    "}, \"cw20 token\", \"auto\");\n",
+    "    initial_balances: [{ address: senderAddress, amount: \"1000000000\" }]\n",
+    "  },\n",
+    "  \"cw20 token\",\n",
+    "  \"auto\"\n",
+    ");\n",
     "usdtContract = new Cw20BaseClient(client, senderAddress, contractAddress);\n",
     "\n",
     "console.log(await usdtContract.tokenInfo());"
@@ -86,13 +92,19 @@
    "source": [
     "import { OraiswapLimitOrderClient } from \"@oraichain/oraidex-contracts-sdk\";\n",
     "\n",
-    "const wasmCode = new Uint8Array(await fetch(\"/wasm/orderbook.wasm\").then(res=>res.arrayBuffer()));\n",
+    "const wasmCode = new Uint8Array(await fetch(\"/wasm/orderbook.wasm\").then((res) => res.arrayBuffer()));\n",
     "const { codeId } = await client.upload(senderAddress, wasmCode, \"auto\");\n",
-    "const { contractAddress } = await client.instantiate(senderAddress, codeId, {\n",
+    "const { contractAddress } = await client.instantiate(\n",
+    "  senderAddress,\n",
+    "  codeId,\n",
+    "  {\n",
     "    admin: senderAddress,\n",
-    "    version: '0.0.1',\n",
-    "    name: 'Orderbook'\n",
-    "}, \"limit order\", \"auto\");\n",
+    "    version: \"0.0.1\",\n",
+    "    name: \"Orderbook\"\n",
+    "  },\n",
+    "  \"limit order\",\n",
+    "  \"auto\"\n",
+    ");\n",
     "orderbookContract = new OraiswapLimitOrderClient(client, senderAddress, contractAddress);\n",
     "\n",
     "console.log(await orderbookContract.contractInfo());"
@@ -147,18 +159,20 @@
    "source": [
     "import { coins } from \"@cosmjs/stargate\";\n",
     "\n",
-    "await orderbookContract.createOrderBookPair({\n",
-    "      baseCoinInfo: { native_token: { denom: \"orai\" } },\n",
-    "      quoteCoinInfo: { token: { contract_addr: usdtContract.contractAddress } },\n",
-    "      spread: '0.1',\n",
-    "      minQuoteCoinAmount: '1'\n",
-    "}, 'auto', '', coins('20', 'orai'));\n",
+    "await orderbookContract.createOrderBookPair(\n",
+    "  {\n",
+    "    baseCoinInfo: { native_token: { denom: \"orai\" } },\n",
+    "    quoteCoinInfo: { token: { contract_addr: usdtContract.contractAddress } },\n",
+    "    spread: \"0.1\",\n",
+    "    minQuoteCoinAmount: \"1\"\n",
+    "  },\n",
+    "  \"auto\",\n",
+    "  \"\",\n",
+    "  coins(\"20\", \"orai\")\n",
+    ");\n",
     "\n",
     "const queryPair = await orderbookContract.orderBook({\n",
-    "    assetInfos: [\n",
-    "        { native_token: { denom: \"orai\" } }, \n",
-    "        { token: { contract_addr: usdtContract.contractAddress } }\n",
-    "    ]\n",
+    "  assetInfos: [{ native_token: { denom: \"orai\" } }, { token: { contract_addr: usdtContract.contractAddress } }]\n",
     "});\n",
     "\n",
     "console.log(\"orai-cw20-usdt pair:\", queryPair);"
@@ -180,33 +194,30 @@
     "import { coin } from \"@cosmjs/stargate\";\n",
     "\n",
     "const orders = [\n",
-    "    [coin('567', 'orai'), coin('123', 'usdt'), 'buy'],\n",
-    "    [coin('654', 'orai'), coin('111', 'usdt'), 'buy'],\n",
-    "    [coin('553', 'orai'), coin('100', 'usdt'), 'sell'],\n",
-    "    [coin('632', 'orai'), coin('100', 'usdt'), 'sell']\n",
+    "  [coin(\"567\", \"orai\"), coin(\"123\", \"usdt\"), \"buy\"],\n",
+    "  [coin(\"654\", \"orai\"), coin(\"111\", \"usdt\"), \"buy\"],\n",
+    "  [coin(\"553\", \"orai\"), coin(\"100\", \"usdt\"), \"sell\"],\n",
+    "  [coin(\"632\", \"orai\"), coin(\"100\", \"usdt\"), \"sell\"]\n",
     "];\n",
     "\n",
     "for (const [base, quote, direction] of orders) {\n",
-    "    await orderbookContract.submitOrder(\n",
-    "      {\n",
-    "        assets: [\n",
-    "            { info: { native_token: { denom: base.denom } }, amount: base.amount }, \n",
-    "            { info: { native_token: { denom: quote.denom } }, amount: quote.amount }\n",
-    "        ],\n",
-    "        direction\n",
-    "      },\n",
-    "      'auto',\n",
-    "      '',\n",
-    "      [direction === 'sell' ? base : quote]     \n",
-    "    );\n",
+    "  await orderbookContract.submitOrder(\n",
+    "    {\n",
+    "      assets: [\n",
+    "        { info: { native_token: { denom: base.denom } }, amount: base.amount },\n",
+    "        { info: { native_token: { denom: quote.denom } }, amount: quote.amount }\n",
+    "      ],\n",
+    "      direction\n",
+    "    },\n",
+    "    \"auto\",\n",
+    "    \"\",\n",
+    "    [direction === \"sell\" ? base : quote]\n",
+    "  );\n",
     "}\n",
     "\n",
     "// query an order\n",
     "const queryOrder = await orderbookContract.order({\n",
-    "  assetInfos: [\n",
-    "    { native_token: { denom: \"orai\" } }, \n",
-    "    { native_token: { denom: \"usdt\" } }, \n",
-    "  ],\n",
+    "  assetInfos: [{ native_token: { denom: \"orai\" } }, { native_token: { denom: \"usdt\" } }],\n",
     "  orderId: 1\n",
     "});\n",
     "\n",
