--- a/public/nb/basic.ipynb
+++ b/public/nb/basic.ipynb
@@ -64,15 +64,21 @@
       "source": [
         "import { Cw20BaseClient } from \"@oraichain/common-contracts-sdk\";\n",
         "\n",
-        "const wasmCode = new Uint8Array(await fetch(\"/wasm/cw20-base.wasm\").then(res=>res.arrayBuffer()));\n",
+        "const wasmCode = new Uint8Array(await fetch(\"/wasm/cw20-base.wasm\").then((res) => res.arrayBuffer()));\n",
         "const { codeId } = await client.upload(senderAddress, wasmCode, \"auto\");\n",
-        "const { contractAddress } = await client.instantiate(senderAddress, codeId, {\n",
+        "const { contractAddress } = await client.instantiate(\n",
+        "  senderAddress,\n",
+        "  codeId,\n",
+        "  {\n",
         "    decimals: 6,\n",
         "    symbol: \"CVT\",\n",
         "    name: \"cosmoverse token\",\n",
         "    mint: { minter: senderAddress },\n",
-        "    initial_balances: [{ address: senderAddress, amount: \"1000000000\" }] \n",
-        "}, \"cw20 token\", \"auto\");\n",
+        "    initial_balances: [{ address: senderAddress, amount: \"1000000000\" }]\n",
+        "  },\n",
+        "  \"cw20 token\",\n",
+        "  \"auto\"\n",
+        ");\n",
         "\n",
         "cw20Contract = new Cw20BaseClient(client, senderAddress, contractAddress);\n",
         "\n",
@@ -132,22 +138,26 @@
         "import { compare } from \"@oraichain/cosmwasm-vm-js\";\n",
         "import { Cw20BaseClient } from \"@oraichain/common-contracts-sdk\";\n",
         "\n",
-        "const wasmCode = new Uint8Array(await fetch(\"/wasm/kwt-token.wasm\").then(res=>res.arrayBuffer()));\n",
+        "const wasmCode = new Uint8Array(await fetch(\"/wasm/kwt-token.wasm\").then((res) => res.arrayBuffer()));\n",
         "const { codeId } = await client.upload(senderAddress, wasmCode, \"auto\");\n",
         "\n",
-        "const buffer = Buffer.from(await fetch('/wasm/kwt-token.state').then(res=>res.arrayBuffer()));\n",
+        "const buffer = Buffer.from(await fetch(\"/wasm/kwt-token.state\").then((res) => res.arrayBuffer()));\n",
         "const state = SortedMap.rawPack(new BufferCollection(buffer), compare);\n",
         "\n",
         "const kwtContract = new Cw20BaseClient(client, senderAddress, \"orai1nd4r053e3kgedgld2ymen8l9yrw8xpjyaal7j5\");\n",
-        "await client.loadContract(\"orai1nd4r053e3kgedgld2ymen8l9yrw8xpjyaal7j5\", {\n",
-        "      codeId,\n",
-        "      admin: senderAddress,\n",
-        "      label: \"kwt token\",\n",
-        "      creator: senderAddress,\n",
-        "      created: 1,\n",
-        "}, state);\n",
+        "await client.loadContract(\n",
+        "  \"orai1nd4r053e3kgedgld2ymen8l9yrw8xpjyaal7j5\",\n",
+        "  {\n",
+        "    codeId,\n",
+        "    admin: senderAddress,\n",
+        "    label: \"kwt token\",\n",
+        "    creator: senderAddress,\n",
+        "    created: 1\n",
+        "  },\n",
+        "  state\n",
+        ");\n",
         "\n",
-        "console.log(await kwtContract.allAccounts({limit:5}));"
+        "console.log(await kwtContract.allAccounts({ limit: 5 }));\n"
       ]
     }
   ],
