--- a/public/nb/ibc-ics20.ipynb
+++ b/public/nb/ibc-ics20.ipynb
@@ -63,15 +63,21 @@
       "source": [
         "import { Cw20BaseClient } from \"@oraichain/common-contracts-sdk\";\n",
         "\n",
-        "const wasmCode = new Uint8Array(await fetch(\"/wasm/cw20-base.wasm\").then(res=>res.arrayBuffer()));\n",
+        "const wasmCode = new Uint8Array(await fetch(\"/wasm/cw20-base.wasm\").then((res) => res.arrayBuffer()));\n",
         "const { codeId } = await client.upload(senderAddress, wasmCode, \"auto\");\n",
-        "const { contractAddress } = await client.instantiate(senderAddress, codeId, {\n",
+        "const { contractAddress } = await client.instantiate(\n",
+        "  senderAddress,\n",
+        "  codeId,\n",
+        "  {\n",
         "    decimals: 6,\n",
         "    symbol: \"CVT\",\n",
         "    name: \"cosmoverse token\",\n",
         "    mint: { minter: senderAddress },\n",
-        "    initial_balances: [{ address: senderAddress, amount: \"1000000000\" }] \n",
-        "}, \"cw20 token\", \"auto\");\n",
+        "    initial_balances: [{ address: senderAddress, amount: \"1000000000\" }]\n",
+        "  },\n",
+        "  \"cw20 token\",\n",
+        "  \"auto\"\n",
+        ");\n",
         "\n",
         "cw20Contract = new Cw20BaseClient(client, senderAddress, contractAddress);\n",
         "\n",
@@ -179,16 +185,21 @@
       "source": [
         "import { CwIcs20LatestClient } from \"@oraichain/common-contracts-sdk\";\n",
         "\n",
-        "// deploy ics20 contract \n",
-        "const wasmCode = new Uint8Array(await fetch(\"/wasm/cw-ics20-latest.wasm\").then(res=>res.arrayBuffer()));\n",
+        "// deploy ics20 contract\n",
+        "const wasmCode = new Uint8Array(await fetch(\"/wasm/cw-ics20-latest.wasm\").then((res) => res.arrayBuffer()));\n",
         "const { codeId } = await client.upload(senderAddress, wasmCode, \"auto\");\n",
-        "const { contractAddress } = await client.instantiate(senderAddress, codeId, {\n",
+        "const { contractAddress } = await client.instantiate(\n",
+        "  senderAddress,\n",
+        "  codeId,\n",
+        "  {\n",
         "    allowlist: [],\n",
         "    default_timeout: 3600,\n",
         "    gov_contract: senderAddress,\n",
         "    swap_router_contract: \"placeholder\"\n",
-        "}, \"ics20\", \"auto\");\n",
-        "\n",
+        "  },\n",
+        "  \"ics20\",\n",
+        "  \"auto\"\n",
+        ");\n",
         "\n",
         "ics20Contract = new CwIcs20LatestClient(client, senderAddress, contractAddress);\n",
         "\n",
