--- a/public/nb/basic.ipynb
+++ b/public/nb/basic.ipynb
@@ -141,7 +141,7 @@
         "const wasmCode = new Uint8Array(await fetch(\"/wasm/kwt-token.wasm\").then((res) => res.arrayBuffer()));\n",
         "const { codeId } = await client.upload(senderAddress, wasmCode, \"auto\");\n",
         "\n",
-        "const buffer = Buffer.from(await fetch(\"/wasm/kwt-token.state\").then((res) => res.arrayBuffer()));\n",
+        "const buffer = new Uint8Array(await fetch(\"/wasm/kwt-token.state\").then((res) => res.arrayBuffer()));\n",
         "const state = SortedMap.rawPack(new BufferCollection(buffer), compare);\n",
         "\n",
         "const kwtContract = new Cw20BaseClient(client, senderAddress, \"orai1nd4r053e3kgedgld2ymen8l9yrw8xpjyaal7j5\");\n",
