update basic nb

--- a/public/nb/basic.ipynb
+++ b/public/nb/basic.ipynb
@@ -93,7 +93,7 @@
         "### Console.log in smart contract\n",
         "\n",
         "1. run `code ../cw-plus/contracts/cw20-base` to add log function\n",
-        "1. run `cwtools build ../cw-plus/contracts/cw20-base -d -w -o node_modules/@oraichain/common-contracts-build/data/` to override wasm contract file\n",
+        "1. run `cwtools build ../cw-plus/contracts/cw20-base -d -w -o public/wasm/` to override wasm contract file\n",
         "1. re-run notebook above to see the log\n"
       ]
     },
