--- a/public/nb/basic.ipynb
+++ b/public/nb/basic.ipynb
@@ -133,9 +133,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "import { SortedMap } from \"@oraichain/immutable\";\n",
-        "import { BufferCollection } from \"@oraichain/cw-simulate\";\n",
-        "import { compare } from \"@oraichain/cosmwasm-vm-js\";\n",
+        "import { BufferCollection, SortedMap, compare } from \"@oraichain/cw-simulate\";\n",
         "import { Cw20BaseClient } from \"@oraichain/common-contracts-sdk\";\n",
         "\n",
         "const wasmCode = new Uint8Array(await fetch(\"/wasm/kwt-token.wasm\").then((res) => res.arrayBuffer()));\n",
