--- a/public/nb/zk.ipynb
+++ b/public/nb/zk.ipynb
@@ -88,9 +88,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "import { BasicBackendApi } from \"@oraichain/cosmwasm-vm-js\";\n",
+        "import { SimulateCosmWasmClient, BasicBackendApi } from \"@oraichain/cw-simulate\";\n",
         "import { groth16_verify } from \"@oraichain/cosmwasm-vm-zk-web\";\n",
-        "import { SimulateCosmWasmClient } from \"@oraichain/cw-simulate\";\n",
         "\n",
         "// load wasm libraries\n",
         "await require(\"@oraichain/cosmwasm-vm-zk-web\").default();\n",
