add zk to basic notebook

--- a/public/nb/basic.ipynb
+++ b/public/nb/basic.ipynb
@@ -163,7 +163,9 @@
       "id": "416fa37d",
       "metadata": {},
       "source": [
-        "### ZK Smart contract code\n",
+        "### Cosmwasm with Zero Knowledge extension\n",
+        "\n",
+        "#### ZK Smart contract code\n",
         "\n",
         "```rust\n",
         "#[cfg(not(feature = \"library\"))]\n",
@@ -236,7 +238,7 @@
       "id": "a10b0333",
       "metadata": {},
       "source": [
-        "### Import cw-simulate module and create new instance with ZK APIs"
+        "### Change Backend Api with ZK extensions"
       ]
     },
     {
@@ -246,7 +248,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "import { SimulateCosmWasmClient, BasicBackendApi } from \"@oraichain/cw-simulate\";\n",
+        "import { BasicBackendApi } from \"@oraichain/cw-simulate\";\n",
         "import { groth16_verify } from \"@oraichain/cosmwasm-vm-zk-web\";\n",
         "\n",
         "// load wasm libraries\n",
@@ -259,13 +261,7 @@
         "  }\n",
         "}\n",
         "\n",
-        "senderAddress = \"orai14vcw5qk0tdvknpa38wz46js5g7vrvut8lk0lk6\";\n",
-        "client = new SimulateCosmWasmClient({\n",
-        "  backendApi: new ZkBackendApi('orai'),\n",
-        "  chainId: \"Oraichain\",\n",
-        "  bech32Prefix: \"orai\",\n",
-        "  metering: true\n",
-        "});"
+        "client.app.backendApi = new ZkBackendApi('orai');"
       ]
     },
     {
@@ -273,7 +269,7 @@
       "id": "87400ce5",
       "metadata": {},
       "source": [
-        "### Deploy contract on SimulateCosmwasmClient with extended APIs"
+        "### Deploy ZK contract on extended SimulateCosmwasmClient"
       ]
     },
     {
