using iframe eval

--- a/public/nb/basic.ipynb
+++ b/public/nb/basic.ipynb
@@ -291,7 +291,9 @@
         "    \"groth16 verifier\",\n",
         "    \"auto\"\n",
         "  )\n",
-        ").contractAddress;"
+        ").contractAddress;\n",
+        "\n",
+        "console.log(contractAddress);"
       ]
     },
     {
