--- a/public/nb/oraix.ipynb
+++ b/public/nb/oraix.ipynb
@@ -57,11 +57,13 @@
    },
    "outputs": [],
    "source": [
-    "console.log(await client.queryContractSmart(ORAIX_CONTRACT, { \n",
+    "const {holders} = await client.queryContractSmart(ORAIX_CONTRACT, { \n",
     "    top_holders: { \n",
     "        limit: 30 \n",
     "    } \n",
-    "}));"
+    "});\n",
+    "\n",
+    "console.log(holders.map(v=>v.join(':')))"
    ]
   }
  ],
