--- a/public/nb/oraix.ipynb
+++ b/public/nb/oraix.ipynb
@@ -62,8 +62,9 @@
     "        limit: 30 \n",
     "    } \n",
     "});\n",
+    "const {format} = new Intl.NumberFormat('en-US');\n",
     "\n",
-    "console.log(holders.map(v=>v.join(':')))"
+    "console.log(holders.map(v=>v[0]+':'+format(v[1])));"
    ]
   }
  ],
